--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -1,6 +1,5 @@
 body {
     background-color: #f2ece5;
-    font-family: "Yu Mincho", "Hiragino Mincho Pro", serif;
     margin: 0;
     padding: 0;
 }
@@ -55,9 +54,10 @@ body {
 
 button[type="submit"] {
     display: block;
-    width: 100%;
+    width: 30%;
     padding: 12px;
     margin-top: 20px;
+    margin: 0 auto;
     background-color: #7b6653;
     color: #fff;
     border: none;
