--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,23 +1,3 @@
-/* * {
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    background-color: #f4eee9;
-}
-
-header {
-    margin: 0;
-    padding: 0;
-}
-
-main {
-    margin-top: 0;
-    padding-top: 0;
-} */
-
 .header {
     text-align: center;
     border-bottom: 1px solid #E0DFDE;
@@ -27,6 +7,10 @@ main {
 
 .header h1 {
     color: #8B7969;
+}
+
+h1 {
+    margin: 0;
 }
 
 
