--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -19,7 +19,7 @@ body {
     font-size: 28px;
     text-align: center;
     margin-bottom: 40px;
-    color: #5c443b;
+    color: #8B7969;
     font-weight: bold;
 }
 
@@ -32,7 +32,7 @@ body {
 .form__group-title h3 {
     font-size: 16px;
     margin-bottom: 8px;
-    color: #5c443b;
+    color: #8B7969;
 }
 
 
