--- a/src/public/css/contact.css
+++ b/src/public/css/contact.css
@@ -11,6 +11,10 @@
     color: #5f4e41;
 }
 
+.form__header h2 {
+    color: #8B7969;
+}
+
 .form__group {
     display: flex;
     align-items: center;
@@ -76,6 +80,7 @@ textarea {
 .form__contact-button {
     text-align: center;
     margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 .form__contact-button button {
