--- a/src/public/css/contact_confirm.css
+++ b/src/public/css/contact_confirm.css
@@ -17,6 +17,10 @@
     color: #5f4e41;
 }
 
+.form__header h2{
+    color: #8B7969;
+}
+
 .form th {
     background-color: #b4a08a;
     color: #fff;
@@ -33,14 +37,16 @@
     border: 1px solid #ddd;
     vertical-align: top;
     line-height: 1.6;
+    color: #8B7969;
 }
 
 .form__button-wrapper {
-    text-align: center;
     margin-top: 30px;
+    display: flex;
+    justify-content: center;
 }
 
-.form__button-submit {
+.form__button{
     background-color: #b4a08a;
     color: #fff;
     border: none;
@@ -51,7 +57,15 @@
     transition: background-color 0.3s;
 }
 
-.form__button-submit:hover {
+.form__button-back {
+    color: #8B7969;
+    border: none;
+    font-size: 16px;
+    background-color: #fff;
+    text-decoration: underline;
+}
+
+.form__button:hover {
     background-color: #a08874;
 }
 
